RESOLVED FIXED149199
Web Inspector: Fix common typo "supress" => "suppress"
https://bugs.webkit.org/show_bug.cgi?id=149199
Summary Web Inspector: Fix common typo "supress" => "suppress"
Joseph Pecoraro
Reported 2015-09-15 17:53:20 PDT
Fix common typo "supress" => "suppress".
Attachments
[PATCH] Proposed Fix (10.72 KB, patch)
2015-09-15 17:57 PDT, Joseph Pecoraro
no flags
Joseph Pecoraro
Comment 1 2015-09-15 17:57:00 PDT
Created attachment 261273 [details] [PATCH] Proposed Fix I didn't check LayoutTests, of which I know there are some.
WebKit Commit Bot
Comment 2 2015-09-15 17:59:22 PDT
Attachment 261273 [details] did not pass style-queue: ERROR: Source/WebCore/platform/NotImplemented.h:32: preprocessor directives (e.g., #ifdef, #define, #import) should never be indented. [whitespace/indent] [4] ERROR: Source/WebCore/platform/NotImplemented.h:34: preprocessor directives (e.g., #ifdef, #define, #import) should never be indented. [whitespace/indent] [4] ERROR: Source/WebCore/platform/NotImplemented.h:47: Multi line control clauses should use braces. [whitespace/braces] [4] Total errors found: 3 in 12 files If any of these errors are false positives, please file a bug against check-webkit-style.
WebKit Commit Bot
Comment 3 2015-09-16 16:25:37 PDT
Comment on attachment 261273 [details] [PATCH] Proposed Fix Clearing flags on attachment: 261273 Committed r189883: <http://trac.webkit.org/changeset/189883>
WebKit Commit Bot
Comment 4 2015-09-16 16:25:41 PDT
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.